force-app/main/default/objects/Service_Type__c/Service_Type__c.object-meta.xml
<CustomObject>
    <label>Service Type</label>
    <pluralLabel>Service Types</pluralLabel>
    <description>Types of services offered at locations</description>
    <nameField>
        <label>Service Type Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>