force-app/main/default/objects/Service_Type__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <label>Active</label>
    <type>Checkbox</type>
    <description>Indicates if this service type is active</description>
    <defaultValue>true</defaultValue>
</CustomField>