force-app/main/default/objects/Service_Type__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <type>LongTextArea</type>
    <description>Description of the service offered</description>
    <length>32768</length>
</CustomField>