force-app/main/default/objects/Service_Type__c/fields/Duration_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Duration_Minutes__c</fullName>
    <label>Duration (Minutes)</label>
    <type>Number</type>
    <description>Duration of service in minutes</description>
    <required>true</required>
    <precision>4</precision>
    <scale>0</scale>
</CustomField>